0.50.2
 - armv5hf moved to armv5te with softfp (used FPU if available)

0.50.1
 - Add Crypt::OpenSSL::RSA for sunos/perl 5.12
 
0.50.0
 - Send "play" only when receiving "RECORD" (see not in hairtunes.c about deadlock)
 - New buffering method using time instead of buffer length only
 - Default buffer threshold is 750ms
 - Reorganize loglevels
  
0.42.0
 - Use cross-compiling to support pi-1
 - Add armv5te build 
 - Change armhf to armv6hf
 
0.41.1
 - Add Solaris support
 - Stream must start if first flag is sync or audio
 
0.40.0
 - Clean debug in helper
 - BufferThreshold set to 255KB by default
 - Add Setting pages to select players, set BufferThreshold and loglevel
  
0.37.0
 - Add debug capabilities in helper
 - RTP resent counter was not mutex protected
 - When creating socket, do not set timeout!
 - in RECORD, Audio-Latency set to 44100

0.36.0
 - Remove buffering in helper ==> was conflicting with LMS buffer, creating shuttering
 - Remove some packet retransmission which did not seem necessary (tbc)
 - Buffer only if packets are missing, up to 64 pakcets (x8ms= 512ms)
 
0.35.3
 - Close image proxy socket w/o waiting for the other end to respond
 - helper: when overrun happens, keep the largest amount of buffered audio
 - change name to avoid conflict with original version
 
0.35.2
 - For doAction, LMS always sends the master player, even if the skip/prev is made on a slave