@@ -1,20 +1,20 @@
 <?xml version='1.0' standalone='yes'?>
 <extensions>
-  <name>PLUGIN_SHAIRTUNES2</name>
-  <playerMenu>RADIO</playerMenu>
-  <email>philippe_44@outlook.com</email>
-  <description>PLUGIN_SHAIRTUNES2_DESC</description>
-  <homepageURL></homepageURL>
-  <optionsURL></optionsURL>
   <defaultState>enabled</defaultState>
+  <playerMenu>RADIO</playerMenu>
+  <icon></icon>
+  <optionsURL></optionsURL>
+  <description>PLUGIN_SHAIRTUNES2_DESC</description>
+  <email>philippe_44@outlook.com</email>
   <module>Plugins::ShairTunes2W::Plugin</module>
   <creator>Philippe</creator>
+  <version>0.50.2</version>
   <type>2</type>
   <targetApplication>
-    <id>Squeezecenter</id>
     <maxVersion>7.*</maxVersion>
+    <id>Squeezecenter</id>
     <minVersion>7.5</minVersion>
   </targetApplication>
-  <version>0.50.2</version>
-  <icon></icon>
+  <homepageURL></homepageURL>
+  <name>PLUGIN_SHAIRTUNES2</name>
 </extensions>
